--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <!-- bootstrap styles -->
 <link href="styles/bootstrap.min.css" rel="stylesheet">
 <!-- Main styles -->
-<link href="styles/style.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
 <section class="wrapper">
